--- a/tictactoereact2/src/index.css
+++ b/tictactoereact2/src/index.css
@@ -6,14 +6,14 @@
   background-color: lavender;
 }
 
-.Jatekter{
+.jatekter{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   width: 300px;
 }
 
 .mezo{
-  outline: black;
+  border: 1px solid black;
   width: 100px;
   height: 100px;
   
